# castor

./: .gitignore  CMakeLists.txt  CastorApplication.cpp  CastorApplication.hpp  CommandLineFlags.hpp  CompositePIPmsa.cpp  CompositePIPmsa.hpp  CompositePIPnode.cpp  CompositePIPnode.hpp  ExtendedAlphabet.cpp  ExtendedAlphabet.hpp  FactoryPIPnode.hpp  FactoryPIPnodeCPU.cpp  FactoryPIPnodeCPU.hpp  FactoryPIPnodeRAM.cpp  FactoryPIPnodeRAM.hpp  FactoryPIPnodeSB.cpp  FactoryPIPnodeSB.hpp  JATIApplication.cpp  JATIApplication.hpp  Jati.cpp  Optimizators.cpp  Optimizators.hpp  PIP.cpp  PIP.hpp  PIPlkData.hpp  PIPmsa.cpp  PIPmsa.hpp  PIPnode.cpp  PIPnode.hpp  README.md  RHomogeneousTreeLikelihood_Generic.cpp  RHomogeneousTreeLikelihood_Generic.hpp  RHomogeneousTreeLikelihood_PIP.cpp  RHomogeneousTreeLikelihood_PIP.hpp  SupportMeasures.cpp  SupportMeasures.hpp  TSHHomogeneousTreeLikelihood.cpp  TSHHomogeneousTreeLikelihood.hpp  TSHSearchable.hpp  (+28 more)
archive/: Jati.cpp  TSHHomogeneousTreeLikelihood.cpp  TSHHomogeneousTreeLikelihood.hpp  TSHSearchable.hpp  progressivePIP.hpp
conf/: indel_aware.txt  indel_non_aware.txt  t20_s1000_1_minijati_pipk80_bionjspr.0.txt  t20_s100_1_minijati_pipk80_bionjnni.0.txt  t20_s100_1_minijati_pipk80_bionjspr.0.txt  t20_s100_1_minijati_pipk80_bionjspr.1.txt  t20_s100_1_minijati_pipk80_bionjspr.2.txt  t20_s100_1_minijati_pipk80_bionjspr.3.txt  t40_a100_1_minijati_pipk80_bionjspr.0.txt  t40_a100_1_minijati_pipk80_bionjspr.1.txt  t40_a100_1_minijati_pipk80_bionjspr.2.txt  t60_a100_1_minijati_pipk80_bionjmixed.0.txt  t60_a100_1_minijati_pipk80_bionjspr.0.txt  t60_a100_1_minijati_pipk80_bionjspr.1.txt  t60_a100_1_minijati_pipk80_bionjspr.2.txt  t60_a100_1_minijati_pipk80_bionjspr.3.txt  t60_a100_2_minijati_pipk80_bionjspr.1.txt  t60_b1000_1_minijati_pipk80_bionjspr.0.txt
data/: MSA_fullA_5.fa  tree_13_leaves_r_bl.nwk  tree_5_leaves_r_bl.nwk  tree_8_leaves_r_bl.nwk
include/: CastorApplication.hpp  PIP.hpp  Profiler.h  RHomogeneousTreeLikelihood_PIP.hpp  UnifiedTSHTopologySearch.hpp  UnifiedTSHomogeneousTreeLikelihood_PIP.hpp
input/: README.md
output/: testlambdamu_aligned.fa  testlambdamu_aligned_lk.txt
src/: Optimizators.cpp  RHomogeneousTreeLikelihood_PIP.cpp  UnifiedTSHTopologySearch.cpp  UnifiedTSHomogeneousTreeLikelihood_PIP.cpp  main.cpp
tests/datasets/: aligned_simulated_big_nt.fa  aligned_simulated_small_nt.fa
tests/param_files/CORE/: pip_likelihoodfunction.txt
tests/param_files/GTR/: nt_real_aligned_optall.txt
tests/param_files/GTR_F/: nt_real_aligned_optall.txt
tests/param_files/GTR_PIP/: nt_real_aligned_optall.txt
tests/param_files/GTR_PIP_F/: nt_real_aligned_optall.txt
tests/scripts/: test_core_pip_lkfunc.sh
tests/unit_tests/: tshlib_utree_test.cpp
